Allow explicit binding to detached addresss. Fixes PR kern/51435.